--- a/main.ipynb
+++ b/main.ipynb
@@ -209,8 +209,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"routing_methods = ['NN', 'SA', 'ACA']\n",
-    "clustering_methods = ['None', 'kmeans', 'agglomerative']\"\"\"\n",
     "combinations = {'None': ['NN', 'SA', 'ACA'], 'kmeans': ['NN', 'SA'], 'agglomerative': ['NN', 'SA']}\n",
     "solution_times = {'None': {'NN': [], 'SA': [], 'ACA': []}, 'kmeans': {'NN': [], 'SA': []}, 'agglomerative': {'NN': [], 'SA': []}}\n",
     "final_tour_distances = {'None': {'NN': [], 'SA': [], 'ACA': []}, 'kmeans': {'NN': [], 'SA': []}, 'agglomerative': {'NN': [], 'SA': []}}\n",
@@ -20411,7 +20409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "d7449ce7",
    "metadata": {},
    "outputs": [
@@ -20445,8 +20443,8 @@
     "plt.boxplot(\n",
     "    groups,\n",
     "    labels=labels,\n",
-    "    showfliers=True,     # outliery\n",
-    "    whis=1.5             # klasyczna definicja wąsów\n",
+    "    showfliers=True,\n",
+    "    whis=1.5\n",
     ")\n",
     "\n",
     "plt.ylabel(\"Długość trasy\")\n",
